Continuation des scripts de lumière && création de l'ennemi Kid et de ses scripts

--- a/HorrorGameBeta/Assembly-CSharp.csproj
+++ b/HorrorGameBeta/Assembly-CSharp.csproj
@@ -59,11 +59,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\ChangeSpawn.cs" />
+    <Compile Include="Assets\Script\CheckSee.cs" />
     <Compile Include="Assets\Script\Escape.cs" />
     <Compile Include="Assets\Script\LightsOff.cs" />
     <Compile Include="Assets\Script\Movement.cs" />
+    <Compile Include="Assets\Script\OnCollision.cs" />
     <Compile Include="Assets\Script\Pathfinding.cs" />
     <Compile Include="Assets\Script\Rotation.cs" />
+    <Compile Include="Assets\Script\Spawn.cs" />
+    <Compile Include="Assets\Script\StartGame.cs" />
     <Compile Include="Assets\Script\Switch.cs" />
     <Compile Include="Assets\Script\ToggleLight.cs" />
     <Reference Include="UnityEditor.StandardEvents">
