--- a/HorrorGameBeta/Assembly-CSharp.csproj
+++ b/HorrorGameBeta/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\Script\Menu\QuitGame.cs" />
     <Compile Include="Assets\Script\Menu\StartGame.cs" />
     <Compile Include="Assets\Script\Menu\ToOptions.cs" />
+    <Compile Include="Assets\Script\Player\Battery.cs" />
     <Compile Include="Assets\Script\Player\Escape.cs" />
     <Compile Include="Assets\Script\Player\LookAt.cs" />
     <Compile Include="Assets\Script\Player\Movement.cs" />
