--- a/HorrorGameBeta/Assembly-CSharp.csproj
+++ b/HorrorGameBeta/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Script\Menu\BeginGame.cs" />
     <Compile Include="Assets\Script\Menu\ChangeSettings.cs" />
     <Compile Include="Assets\Script\Menu\ControlsManager.cs" />
+    <Compile Include="Assets\Script\Menu\Credits.cs" />
     <Compile Include="Assets\Script\Menu\OnEnter.cs" />
     <Compile Include="Assets\Script\Menu\QuitGame.cs" />
     <Compile Include="Assets\Script\Menu\StartGame.cs" />
