--- a/HorrorGameBeta/Assembly-CSharp.csproj
+++ b/HorrorGameBeta/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Script\Menu\ChangeSettings.cs" />
     <Compile Include="Assets\Script\Menu\ControlsManager.cs" />
     <Compile Include="Assets\Script\Menu\Credits.cs" />
+    <Compile Include="Assets\Script\Menu\MenuController.cs" />
     <Compile Include="Assets\Script\Menu\OnEnter.cs" />
     <Compile Include="Assets\Script\Menu\QuitGame.cs" />
     <Compile Include="Assets\Script\Menu\StartGame.cs" />
